RESOLVED FIXED99224
StringImpl::findIgnoringCase() and reverseFindIgnoringCase() don't optimally handle a mix of 8 and 16 bit strings
https://bugs.webkit.org/show_bug.cgi?id=99224
Summary StringImpl::findIgnoringCase() and reverseFindIgnoringCase() don't optimally ...
Michael Saboff
Reported 2012-10-12 17:56:40 PDT
findIgnoringCase() just uses characters() to access string data, thus up converting 8 bit strings. reverseFindIgnoringCase() handles the case where both strings are the same bites. Both of these methods should handle all combinations of 8 and 16 bit arguments.
Attachments
Patch (6.19 KB, patch)
2012-10-12 18:06 PDT, Michael Saboff
webkit.review.bot: commit-queue-
Patch with fix test failures (6.23 KB, patch)
2012-10-12 21:38 PDT, Michael Saboff
no flags
Michael Saboff
Comment 1 2012-10-12 18:06:26 PDT
WebKit Review Bot
Comment 2 2012-10-12 20:21:30 PDT
Comment on attachment 168522 [details] Patch Attachment 168522 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/14294109 New failing tests: fast/encoding/parser-tests-100.html fast/encoding/parser-tests-80.html fast/encoding/parser-tests-90.html http/tests/xmlhttprequest/request-encoding2.html
Build Bot
Comment 3 2012-10-12 20:42:27 PDT
Comment on attachment 168522 [details] Patch Attachment 168522 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/14294111 New failing tests: fast/encoding/parser-tests-100.html fast/encoding/parser-tests-80.html fast/encoding/parser-tests-90.html http/tests/xmlhttprequest/request-encoding2.html
Michael Saboff
Comment 4 2012-10-12 21:38:43 PDT
Created attachment 168538 [details] Patch with fix test failures Wasn't passing index to findIgnoringCaseInner().
Geoffrey Garen
Comment 5 2012-10-17 14:49:00 PDT
Comment on attachment 168538 [details] Patch with fix test failures r=me
WebKit Review Bot
Comment 6 2012-10-17 15:16:16 PDT
Comment on attachment 168538 [details] Patch with fix test failures Clearing flags on attachment: 168538 Committed r131655: <http://trac.webkit.org/changeset/131655>
WebKit Review Bot
Comment 7 2012-10-17 15:16:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.