StringImpl::findIgnoringCase() and reverseFindIgnoringCase() don't optimally handle a mix of 8 and 16 bit strings https://bugs.webkit.org/show_bug.cgi?id=99224

Reviewed by Geoffrey Garen.

Added helper templated functions and all four combinations similar to find() and reverseFind().

(WTF::findIgnoringCaseInner):
(WTF::StringImpl::findIgnoringCase):
(WTF::reverseFindIgnoringCaseInner):
(WTF::StringImpl::reverseFindIgnoringCase):


Canonical link: https://commits.webkit.org/117610@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131655 268f45cc-cd09-0410-ab3c-d52691b4dbfc